# ZeroMQUnityBridge

./: CMakeLists.txt  README.md
include/: ZMQBridge.h
python/: python-client.py
samples/: client.cpp  server.cpp
src/: Context.cpp  Internal.h  Sockets.cpp  ZMQBridge.cpp
unity/: ZMQPlugin.cs
